--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel. /src/index.html --out-dir ./dev",
-    "build": "parcel build ./src/index.html --out-dir ./dist"
+    "build": "parcel build ./src/index.html --out-dir ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
